<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Alfredo Market</string>
    <string name="loading">Loading...</string>
    <string name="not_connection">There is no Internet connection.</string>
    <string name="no_login">Incorrect params. Try again.</string>
	<string name="test_user">Xa511218</string>
	<string name="test_password">P4ntagru3l</string>
	<string name="latest">Latest</string>
	<string name="ratings">Ratings</string>
	<string name="myApps">My Apps</string>
	<string name="updateAll">Update all</string>
	<string name="platform">Android</string>
	<string name="more">More</string>
	<string name="less">Less</string>
	<string name="reviews">Reviews</string>
	<string name="version">Version:</string>
	<string name="size">Size:</string>
	<string name="publication_date">Publication date:</string>
	<string name="enter">Enter</string>
	<string name="write_review">Write a review</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="save_review">Save review</string>
	<string name="report">Report a problem</string>
	<string name="report_body">Describe the problem here...</string>
	<string name="report_subject">A problem occurred with %s</string>
	<string name="install">Install</string>
	<string name="uninstall">Uninstall</string>
	<string name="no_internet">" needs an active Internet connection to work. Please, connect your device and try again"</string>
	<string name="unable_load">Unable to load the application data.\nPlease try again later.\n\nIf the problem persists, contact your administrator.</string>
	<string name="UnableDownloadUpdate">Unable to download update, please, try again later</string>
	<string name="updatingApp">Updating %s. Please wait.</string>
	<string name="updateError">There was an error updating the application try it again later</string>
	<string name="installError">The application can not be installed at this moment, please try again later</string>
	<string name="noAppsToShow">At this moment there are no applications to show</string>
	<string name="not_install">You can not write a review if the app is not installed.</string>
	<string name="ok">OK</string>
	<string name="not_install_title">Application not installed</string>
	<string name="not_categories">At this moment there are no categories to show</string>
	<string name="not_countries">At this moment there are no countries to show</string>
	<string name="not_apps">At this moment there are no applications updates</string>
	<string name="results">Results for: </string>
	<string name="install_app_title">Install Application</string>
	<string name="install_app_ask">Some aspects of the application could not be valid due to different geolocalization. Do you want to continue?</string>
	<string name="cancel">Cancel</string>
	<string name="not_install_apps">At this moment there are no applications installed</string>
	<string name="update_app_title">Update Application</string>
	<string name="update_app_ask">Are you sure to update this application?</string>
	<string name="not_test">At this moment there are no applications to test</string>
	<string name="not_found">No results found</string>
	<string name="server_error">Invalid response from server. Please try again.</string>
	<string name="no_reviews">At this moment there are no reviews to show.</string>
	<string name="reconnecting">Reconnecting...</string>
	<string name="lost_session">Lost session</string>
	<string name="user">User</string>
	<string name="password">Password</string>
</resources>