<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="74.66dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:scaleType="fitEnd"
                android:src="@drawable/logo_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ratingWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/btn_write_review"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/write_review"
                android:textColor="@color/AtosBlue"
                android:textSize="@dimen/TextNormal" android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:background="@drawable/bg_categories"
                android:gravity="center_vertical"
                android:paddingLeft="36dp"
                android:text="@string/reviews"
                android:textColor="@color/AtosBlue"
                android:textSize="@dimen/TextBig"
                android:textStyle="bold" android:layout_marginTop="18dp"/>

            <View
                android:id="@+id/View03"
                android:layout_width="fill_parent"
                android:layout_height="1.33dp"
                android:layout_weight="1"
                android:background="@color/LightGray" />

            <View
                android:id="@+id/View04"
                android:layout_width="fill_parent"
                android:layout_height="1.33dp"
                android:layout_weight="1"
                android:background="@color/White" />
        </LinearLayout>

        <ListView
            android:id="@+id/ratingsList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="9dp"
            android:cacheColorHint="#0000"
            android:clickable="false"
            android:divider="#000"
            android:dividerHeight="0dp"
            android:listSelector="#0000"
            android:visibility="visible" >

        </ListView>

        <TextView
            android:id="@+id/noReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/no_reviews"
            android:textColor="@android:color/black"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/ratingsProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="visible" />

</RelativeLayout>